# embed-nu

./: Cargo.toml
src/: commands.rs  into_expression.rs  into_value.rs  utils.rs
src/context/: bindings.rs  mod.rs
tests/: test_eval.rs
