[package]
name = "embed-nu"
version = "0.9.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Trivernis/embed-nu"
description = "Embed the nu engine in your rust application"
authors = ["trivernis <trivernis@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = "7.5.0"
nu-cmd-lang = "0.101.0"
nu-command = "0.101.0"
nu-engine = "0.101.0"
nu-parser = "0.101.0"
nu-protocol = "0.101.0"
nu-utils = "0.102.0"
paste = "1.0.14"
rusty-value = { version = "0.6.0", features = ["derive"] }
thiserror = "2.0.12"
